# email-triage-env

./: Dockerfile  README.md  __init__.py  baseline_agent.py  email_data.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
server/: __init__.py  app.py  environment.py
