[project]
name = "email-triage-env"
version = "1.0.0"
description = "An OpenEnv-compliant environment for training AI agents on email triage and response tasks"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server*", "email_triage_env*"]
